# gear-poi-manager

./: README.md  build_error.txt  package.json  tauri_build_err.txt
.github/workflows/: release.yml
docs/: 0_prd.md  1_tech_specification.md  1_test_specification.md  2_uiux_guide.md  3_project_manage.md
docs/update/: 001_vector_tile_transition.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build_log.txt  cargo_error.txt  check_err.txt  check_result.txt  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  image_processor.rs  lib.rs  main.rs  mbtiles.rs  tile_downloader.rs
src/components/: AuthPage.css  AuthPage.tsx  BottomSheet.css  BottomSheet.tsx  MapCanvas.css  MapCanvas.tsx  PoiDetail.css  PoiDetail.tsx  PoiForm.css  PoiForm.tsx  SettingsForm.css  SettingsForm.tsx
src/hooks/: useAuth.ts  useGeolocation.ts  useMap.ts
src/lib/: database.types.ts  poiService.ts  supabase.ts
supabase/: seed.sql
supabase/migrations/: 001_init.sql
