[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-geolocation = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"

# SQLite (MBTiles 读写)
rusqlite = { version = "0.32", features = ["bundled"] }

# 异步 HTTP 客户端（瓦片下载）
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 状态管理
once_cell = "1"
