[package]
name = "gear-poi"
version = "0.1.0"
description = "A professional personal POI manager built with Tauri v2"
authors = ["Gearinger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gear_poi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-geolocation = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"

# SQLite (MBTiles 读写)
rusqlite = { version = "0.32", features = ["bundled"] }

# 异步 HTTP 客户端（瓦片下载 + 图床上传）
reqwest = { version = "0.12", features = ["rustls-tls", "multipart", "json"], default-features = false }

# 图片处理与压缩 (WebP)
image = "0.25"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 状态管理
once_cell = "1"
